# prototype_asr_assistant

./: CMakeLists.txt  InferenceCTC.cpp  README.md  sample_audio.flac
inference_tutorial/: align.lst  audio.lst  audio_1.lst  requirements.txt  result.align  tokens.txt  vad.lst
python_code/: actions.py  audio_processing.py  gui.py  main.py  util.py
